--- a/package_manifest.yaml
+++ b/package_manifest.yaml
@@ -20,13 +20,10 @@ foreman_packages:
 foreman_scl_packages:
   vars:
     scl: 'tfm'
+    build_package_tags:
+      - foreman-nightly-rhel7
     package_base_dir: 'packages/foreman/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-nightly-rhel7
-      - foreman-nightly-el8
-    releasers:
-      - koji-foreman
     nightly_releaser: koji-foreman-jenkins
     repoclosure_config: repoclosure/yum.conf
     repoclosure_target_repos:
@@ -50,8 +47,7 @@ foreman_scl_packages:
         - el8-puppet-6
   hosts:
     foreman:
-      releasers:
-        - "{{ nightly_releaser }}"
+      scl: ''
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=foreman-develop-source-release"
@@ -84,7 +80,10 @@ foreman_scl_packages:
     rubygem-coffee-script: {}
     rubygem-coffee-script-source: {}
     rubygem-coffee-rails: {}
-    rubygem-concurrent-ruby: {}
+    rubygem-concurrent-ruby:
+      build_package_tags:
+        - foreman-nightly-rhel7
+        - foreman-nightly-rhel8
     rubygem-concurrent-ruby-edge: {}
     rubygem-connection_pool: {}
     rubygem-crass: {}
@@ -102,13 +101,13 @@ foreman_scl_packages:
     rubygem-excon: {}
     rubygem-facter: {}
     rubygem-faraday:
-      releasers:
-        - koji-foreman
-        - koji-foreman-plugins
+      build_package_tags:
+        - foreman-nightly-rhel7
+        - foreman-nightly-plugins-rhel7
     rubygem-fast_gettext:
-      releasers:
-        - koji-foreman
-        - koji-foreman-plugins
+      build_package_tags:
+        - foreman-nightly-rhel7
+        - foreman-nightly-plugins-rhel7
     rubygem-fog-aws: {}
     rubygem-fog-core: {}
     rubygem-fog-digitalocean: {}
@@ -136,16 +135,12 @@ foreman_scl_packages:
     rubygem-graphql-batch: {}
     rubygem-gridster-rails: {}
     rubygem-hammer_cli:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=hammer-cli-master-source-release"
         - "jenkins_url=https://ci.theforeman.org"
       build_package_tito_builder: "tito.builder.FetchBuilder"
     rubygem-hammer_cli_foreman:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=hammer-cli-foreman-master-source-release"
@@ -182,13 +177,13 @@ foreman_scl_packages:
     rubygem-net-ping: {}
     rubygem-net-scp: {}
     rubygem-net-ssh:
-      releasers:
-        - koji-foreman
-        - koji-foreman-plugins
+      build_package_tags:
+        - foreman-nightly-rhel7
+        - foreman-nightly-plugins-rhel7
     rubygem-netrc:
-      releasers:
-        - koji-foreman
-        - koji-foreman-plugins
+      build_package_tags:
+        - foreman-nightly-rhel7
+        - foreman-nightly-plugins-rhel7
     rubygem-nio4r: {}
     rubygem-nokogiri: {}
     rubygem-oauth: {}
@@ -276,13 +271,10 @@ foreman_scl_packages:
 foreman_nodejs_packages:
   vars:
     scl: 'tfm'
+    build_package_tags:
+      - foreman-nightly-rhel7
     package_base_dir: 'packages/foreman/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-nightly-nonscl-rhel7
-      - foreman-nightly-rhel7
-    releasers:
-      - koji-foreman
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_lookaside_repos:
       rhel7:
@@ -424,12 +416,10 @@ foreman_nodejs_packages:
 
 foreman_nonscl_packages:
   vars:
+    build_package_tags:
+      - foreman-nightly-nonscl-rhel7
     package_base_dir: 'packages/foreman/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-nightly-nonscl-rhel7
-    releasers:
-      - koji-foreman
     nightly_releaser: koji-foreman-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_lookaside_repos:
@@ -443,8 +433,6 @@ foreman_nonscl_packages:
   hosts:
     foreman-bootloaders-redhat: {}
     foreman-installer:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=foreman-installer-develop-source-release"
@@ -452,8 +440,6 @@ foreman_nonscl_packages:
       build_package_tito_builder: "tito.builder.FetchBuilder"
     foreman-release-scl: {}
     foreman-selinux:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=foreman-selinux-develop-source-release"
@@ -474,12 +460,10 @@ foreman_nonscl_packages:
 
 foreman_proxy_packages:
   vars:
+    build_package_tags:
+      - foreman-nightly-rhel7
     package_base_dir: 'packages/foreman/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-nightly-rhel7
-    releasers:
-      - koji-foreman
     nightly_releaser: koji-foreman-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_lookaside_repos:
@@ -492,8 +476,6 @@ foreman_proxy_packages:
         - el7-foreman-nightly
   hosts:
     foreman-proxy:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=smart-proxy-develop-source-release"
@@ -509,12 +491,10 @@ foreman_proxy_packages:
 
 foreman_proxy_plugin_packages:
   vars:
+    build_package_tags:
+      - foreman-nightly-rhel7
     package_base_dir: 'packages/plugins/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-plugins-nightly-rhel7
-    releasers:
-      - koji-foreman-plugins
     nightly_releaser: koji-foreman-plugins-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_lookaside_repos:
@@ -564,13 +544,11 @@ foreman_proxy_plugin_packages:
 
 foreman_scl_and_nonscl_packages:
   vars:
-    package_base_dir: 'packages/foreman/'
-    diff_package_skip: false
-    diff_package_tags:
+    build_package_tags:
       - foreman-nightly-rhel7
       - foreman-nightly-nonscl-rhel7
-    releasers:
-      - koji-foreman
+    package_base_dir: 'packages/foreman/'
+    diff_package_skip: false
     nightly_releaser: koji-foreman-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_target_repos:
@@ -595,15 +573,13 @@ foreman_scl_and_nonscl_packages:
 
 foreman_client_packages:
   vars:
-    package_base_dir: 'packages/client/'
-    releasers:
-      - koji-foreman-client
-    diff_package_tags:
+    build_package_tags:
       - foreman-client-nightly-el8
       - foreman-client-nightly-rhel7
       - foreman-client-nightly-rhel6
       - foreman-client-nightly-rhel5
       - foreman-client-nightly-fedora29
+    package_base_dir: 'packages/client/'
     repoclosure_config: repoclosure/yum.conf
     repoclosure_target_repos:
       el8:
@@ -659,12 +635,10 @@ foreman_client_packages:
 
 katello_packages:
   vars:
+    build_package_tags:
+      - katello-nightly-rhel7
     package_base_dir: 'packages/katello/'
     diff_package_skip: false
-    diff_package_tags:
-      - katello-nightly-rhel7
-    releasers:
-      - koji-katello
     nightly_releaser: koji-katello-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_target_repos:
@@ -706,16 +680,12 @@ katello_packages:
     rubygem-hammer_cli_csv: {}
     rubygem-hammer_cli_foreman_virt_who_configure: {}
     rubygem-hammer_cli_katello:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=hammer-cli-katello-master-source-release"
         - "jenkins_url=https://ci.theforeman.org"
       build_package_tito_builder: "tito.builder.FetchBuilder"
     rubygem-katello:
-      releasers:
-        - "{{ nightly_releaser }}"
       build_package_tito_releaser_args: "{{ nightly_package_tito_releaser_args }}"
       nightly_package_tito_releaser_args:
         - "jenkins_job=katello-master-source-release"
@@ -743,12 +713,11 @@ plugins_packages:
 
 plugin_scl_packages:
   vars:
+    scl: 'tfm'
+    build_package_tags:
+      - foreman-plugins-nightly-rhel7
     package_base_dir: 'packages/plugins/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-plugins-nightly-rhel7
-    releasers:
-      - koji-foreman-plugins
     nightly_releaser: koji-foreman-plugins-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_target_repos:
@@ -883,12 +852,10 @@ plugin_scl_packages:
 
 plugin_nonscl_packages:
   vars:
+    build_package_tags:
+      - foreman-plugins-nightly-nonscl-rhel7
     package_base_dir: 'packages/plugins/'
     diff_package_skip: false
-    diff_package_tags:
-      - foreman-plugins-nightly-nonscl-rhel7
-    releasers:
-      - koji-foreman-plugins
     nightly_releaser: koji-foreman-plugins-jenkins
     repoclosure_config: repoclosure/yum_el7.conf
     repoclosure_lookaside_repos:
@@ -1029,13 +996,11 @@ repoclosures:
 
 pulpcore_packages:
   vars:
-    package_base_dir: 'packages/pulpcore/'
-    diff_package_skip: false
-    diff_package_tags:
+    build_package_tags:
       - katello-pulpcore-nightly-el7
       - katello-pulpcore-nightly-el8
-    releasers:
-      - koji-katello-pulpcore
+    package_base_dir: 'packages/pulpcore/'
+    diff_package_skip: false
     repoclosure_config: repoclosure/yum.conf
     repoclosure_target_repos:
       el7:
@@ -1122,16 +1087,13 @@ pulpcore_packages:
 
 foreman_release_packages:
   vars:
-    diff_package_tags:
+    build_package_tags:
       - foreman-nightly-nonscl-rhel7
       - foreman-client-nightly-el8
       - foreman-client-nightly-rhel7
       - foreman-client-nightly-rhel6
       - foreman-client-nightly-rhel5
       - foreman-client-nightly-fedora29
-    releasers:
-      - koji-foreman
-      - koji-foreman-client
     package_base_dir: 'packages/foreman/'
     repoclosure_config: repoclosure/yum.conf
     repoclosure_target_repos:
